# proactive-its

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  data.dvc  docker-compose.dev.yml  docker-compose.yml  package-lock.json  pyproject.toml
.dvc/: config
alembic/: env.py
alembic/versions/: 20260219_0001_initial_schema.py  20260404_0001_add_learner_memory.py  20260404_0002_add_section_indexes.py
app/: main.py
app/api/: auth_routes.py  dependencies.py  routes.py  schemas.py  sse.py
app/auth/: __init__.py  mailer.py  models.py  rate_limit.py  repository.py  security.py  service.py
app/chat/: __init__.py  answer_generator.py  assessment.py  models.py  query_rewrite.py  repository.py  retriever.py  service.py
app/content/: __init__.py  bootstrap.py  chunker.py  fingerprints.py  indexer.py  parser.py  repository.py  section_source.py
app/content/indexing/: __init__.py  indexer.py  section_source.py  token_count.py
app/content/parsing/: __init__.py  chunker.py  io.py
app/content/planning/: __init__.py  plan_builder.py
app/core/: config.py  dependencies.py  markdown_sanitize.py
app/infra/: embeddings.py  qdrant_store.py
app/ingest/: chunker.py  cleaner.py  indexer.py  io.py  loader.py  models.py
app/learner/: __init__.py  models.py  repository.py  service.py
app/platform/: __init__.py  async_runner.py  cache.py  config.py  db.py  embeddings.py  logging.py  markdown_sanitize.py  models.py  observability.py  serializers.py  vector_store.py
app/platform/ai/: __init__.py  openrouter.py  runner.py
app/platform/chat/: __init__.py  interaction_repository.py  models.py  repository.py  runtime.py  serializers.py  tasks.py  transport_models.py  utils.py
app/platform/rag/: __init__.py  answer_generator.py  grounded_answer_runtime.py  query_rewrite.py  retriever.py
app/rag/: citations.py  embeddings.py  generate.py  generator.py  prompt.py  retrieve.py  retriever.py  rewrite.py  service.py  vector_store.py
app/schemas/: api.py
app/state/: __init__.py  cache_repository.py  db.py  interaction_repository.py  models.py  orm_models.py  repository.py  serializers.py  stage_state.py  tutor_state_repository.py
app/state/repositories/: __init__.py  learner_repository.py  session_repository.py
app/state/services/: __init__.py  learner_service.py  service.py
app/teacher/: __init__.py  engine.py  models.py  orm_models.py  prompt_builder.py  repository.py  runtime.py  schemas.py  serializers.py  system_prompt.py
app/teacher/artifacts/: __init__.py  artifact_keys.py  artifacts.py  decision_records.py  document_blocks.py  (+2 more)
app/tutor/: document_blocks.py  flow.py  lesson_generation.py  lesson_service.py  plan.py  plan_projection.py  repository.py  service.py  session.py  stage_source.py  start_message.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
scripts/: bootstrap_runtime.py  check_embedding_budget.py  dev-reset-up.sh  export_openapi.py  index_content.py  run_answer_check_qa.py  run_curriculum_qa.py  seed_learner.py
tests/: test_assessment_service.py  test_feedback_flow.py  test_learner_state_service.py  test_rag_service.py
(+45 files in other folders)
