[project]
name = "proactive-its"
version = "0.1.0"
description = "Baseline tutoring system with deterministic study flow and RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.135.1",
  "uvicorn[standard]>=0.40.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "alembic>=1.18.4",
  "sqlalchemy>=2.0.46",
  "greenlet>=3.2.4",
  "asyncpg>=0.31.0",
  "qdrant-client>=1.16.2",
  "openai>=2.21.0",
  "langchain-core>=1.2.13",
  "langchain-openai>=1.1.9",
  "markdown-it-py>=4.0.0",
  "python-dotenv>=1.2.1",
  "tiktoken>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*", "tests*", "scripts*"]
